// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppWraper stayles-component should test the styled-component NavContainer 1`] = `
.c0 {
  grid-area: nav;
}

<div
  className="c0"
/>
`;

exports[`AppWraper stayles-component should test the styled-component Wrapper 1`] = `
.c0 {
  display: grid;
  width: 100vw;
  height: 100vh;
  grid-template-rows: 90px auto;
  grid-template-columns: 248px auto;
  grid-template-areas: 'nav header' 'nav content';
}

@media screen and (max-width:900px) {
  .c0 {
    grid-template-rows: 56px 90px auto 60px;
    grid-template-columns: auto;
    grid-template-areas: 'nav' 'header' 'content' 'foot';
  }
}

<div
  className="c0"
/>
`;

exports[`AppWraper stayles-component should test the styled-component WrapperContent 1`] = `
.c0 {
  grid-area: content;
  padding: 5px;
}

<div
  className="c0"
/>
`;

exports[`AppWraper stayles-component should test the styled-component WrapperHeader 1`] = `
.c0 {
  grid-area: header;
}

<div
  className="c0"
/>
`;
